# larql

./: .gitignore  vulkan_errors.txt
crates/larql-compute/: Cargo.toml  build.rs
crates/larql-compute/csrc/: q4_dot.c
crates/larql-compute/examples/: test_dot.rs
crates/larql-compute/src/: lib.rs
crates/larql-compute/src/vulkan/: buffers.rs  calibrate.rs  decode_hybrid.rs  direct_ops.rs  f32_ops.rs  mod.rs  moe_dispatch.rs  pipeline.rs  prefill.rs
crates/larql-compute/src/vulkan/decode/: mod.rs  profile.rs
crates/larql-compute/src/vulkan/diag/: mod.rs
crates/larql-compute/src/vulkan/kernel/: handle.rs  mod.rs  traits.rs
crates/larql-compute/src/vulkan/ops/: f32_gemv.rs  full_layer.rs  kv_cache.rs  mod.rs  q4_batched.rs  q4_common.rs  q4_f32_matvec.rs  q4_matvec.rs  q4_vecmat.rs  q4k_matvec.rs  q8_quantize.rs  rms_norm.rs  rope.rs  silu.rs  turboquant.rs
crates/larql-compute/src/vulkan/shaders/: activation.comp  attn_fused.comp  attn_fused.glsl  f32_gemv.comp  f32_gemv.glsl  geglu.comp  graph_walk_knn.comp  layer_norm.comp  layer_norm.glsl  mod.rs  post_attn_residual_norm_store.comp  post_ffn_norm_residual_add.comp  q4_f32_matvec.comp  q4_matvec.comp  q4_sparse_matvec.comp  q4_vecmat.comp  q4_vecmat.glsl  q4k_ffn_gate_up.comp  q4k_ffn_gate_up.glsl  q4k_matvec.comp  q4k_matvec.glsl  q4k_matvec_stride32.comp  q4k_q6k_qkv_proj.comp  q4k_qkv_proj.comp  q4k_qkv_proj.glsl  q6k_matvec.comp  q6k_matvec.glsl  q8_matvec.comp  qk_norm.glsl  qk_norm_rope_fused.comp  quantize_q8.comp  quantize_q8.glsl  residual_ops.comp  rms_norm.comp  rms_norm.glsl  rope.comp  rope.glsl  sgemm.comp  sgemm.glsl  sgemm_transb.comp  (+8 more)
crates/larql-compute/src/vulkan/stages/: attention.rs  ffn.rs  input_norm.rs  layer_scalar.rs  mod.rs  o_proj.rs  qk_norm.rs  qkv_proj.rs  quant_matvec.rs  residual.rs  rope.rs
crates/larql-compute/src/vulkan/trait_impl/: decode.rs  matmul.rs  mod.rs  quant_matvec.rs
crates/larql-compute/src/xpu/: bridge_impl.cpp  buffers.rs  calibrate.rs  decode_hybrid.rs  direct_ops.rs  f32_ops.rs  ffi.rs  kernels.cpp  kernels.hpp  mod.rs  moe_dispatch.rs  pipeline.rs  prefill.rs  sycl_api.cpp
crates/larql-compute/src/xpu/decode/: encode_attn.rs  encode_ffn.rs  encode_post_ffn.rs  encode_qkv.rs  gpu_timing.rs  mod.rs  moe_combine.rs  moe_interleave.rs  profile.rs
crates/larql-compute/src/xpu/diag/: kernel_profile.rs  (+2 more)
crates/larql-compute/tests/: test_backend_parity.rs
(+36 files in other folders)
