[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backends for LARQL — CPU (BLAS), Metal (GPU), CUDA (planned). Owns matmul dispatch, Q4 kernels, buffer management."
keywords = ["matmul", "metal", "gpu", "quantization", "blas"]
categories = ["science"]

[dependencies]
# Matrix types
ndarray = { version = "0.16", features = ["blas"] }
# MoE expert parallelism: top-k experts run independently per token.
rayon = "1.10"
# Wire-format constants (Q4_K_BLOCK_ELEMS, etc.) for padding decisions.
# Tests/benches depend on it too — keep both lists in sync.
larql-models = { path = "../larql-models" }

# XPU / SYCL Backend
cxx = { version = "1.0", optional = true }
once_cell = "1.19"

# Vulkan Backend
vulkano = { version = "0.34", optional = true }
vulkano-shaders = { version = "0.34", optional = true }
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

# Metal GPU (macOS only, optional)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
# Direct objc msg_send! for Metal API not exposed by metal-rs 0.29 —
# specifically `MTLCommandBuffer.GPUStartTime/GPUEndTime` for production
# decode timing diagnostics. Same major version metal-rs uses internally.
objc = { version = "0.2", optional = true }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.10", features = ["intel-mkl"], default-features = false }


[features]
default = []
metal = ["dep:metal", "dep:objc"]
xpu = ["dep:cxx", "cxx-build"]
vulkan = ["dep:vulkano", "dep:vulkano-shaders"]
# cuda = []  # Future: CUDA backend

[build-dependencies]
cc = "1.0"
cxx-build = { version = "1.0", optional = true }
cxx-gen = "0.7"
proc-macro2 = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "linalg"
harness = false

[[bench]]
name = "quant_matvec"
harness = false
